2003-06-25  Jakub Steiner <jimmac@ximian.com>

	* */stock: added libgnomeui stock and OOo stock. gtk+ to go
	  I spent the whole f***ing day moving stuff over, let's hope
	  it's ok.
	* 32/apps/*:
	* 48/apps/*: XD2 stuff

2003-06-20  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/Makefile.am: forgot to add the blender icon here
	  :/
	
2003-06-16 Mark Finlay <sisob@eircom.net>

	* 48x48/apps/gnome-util.png: Replacing icon with one created by Luca Ferretti 
	(inspired by XD2). The one I added before was too red and thus vidually distracting .

	* 48x48/apps/MakeFile.am:
	* 48x48/apps/gnome-other.png: The other menu entry should have a unique icon. 
	This is possibly not perfect but it is better than using gnome-applications.png

2003-06-11  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/gnome-mime-application-x-blender.png: Blender files
	  seem to lack an icon. Needs to be added to gnome-vfs too.
	* 48x48/mimetypes/gnome-mime-text-x-troff-man.png: man files
	* 48x48/mimetypes/gnome-mime-text-x-readme.png: readme files

2003-06-10  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/gnome-audio2.png:
	* 48x48/apps/gnome-globe.png:
	* 48x48/apps/gnome-graphics.png:
	* 48x48/apps/gnome-joystick.png:
	* 48x48/apps/gnome-multimedia.png:
	* 48x48/apps/gnome-system.png: more crisp gnome2 style

=== gnome-icon-theme 1.0.5 ===
	
2003-06-10  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump version to 1.0.5.

2003-06-08 Mark Finlay <sisob@eircom.net>

	* 48x48/apps/Makefile.am

	Opps, forgot to fix the makefile

2003-06-08 Mark Finlay <sisob@eircom.net>

	* 48x48/apps/gnome-accessories.png: renamed to
	gnome-util.png
	* 48x48/apps/gnome-programming.png:
	renamed to gnome-devel.png
	* 48x48/apps/gnome-games.png:
	renamed to gnome-joystick.png

	Changing icon names breaks backwards compatability,
	so I''m changing them back.

2003-06-06 Mark Finlay <sisob@eircom.net>
	
	* 48x48/apps/gnome-audio2.png:
	* 48x48/apps/gnome-games.png: