@@ -1,5 +1,9 @@
 2003-06-25  Jakub Steiner <jimmac@ximian.com>
 
+	* 24x24/stock/media/stock_media*: playback icons
+
+2003-06-25  Jakub Steiner <jimmac@ximian.com>
+
 	* */stock: added libgnomeui stock and OOo stock. gtk+ to go
 	  I spent the whole f***ing day moving stuff over, let's hope
 	  it's ok.
